:sparkles: カスタムのコマンドを入力できるように
close #13

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2,11 +2,12 @@
     "context-menu.duplicate": "複製",
     "context-menu.rename": "名前の変更",
     "context-menu.delete": "削除",
+    "export.command-mode": "カスタムコマンド",
     "export.particle": "Particle",
     "export.particle-speed": "Particle: Speed",
     "export.separate-export-data": "出力データを図形名で区切る",
     "export.coordinate-accuracy": "出力座標の精度",
-    "export.export-": "出力される%0%",
+    "export.export-particle-amount": "出力されるパーティクル数",
     "export.to-mcfunction": "to mcfunction",
     "export.to-clipboard": "to clipboard",
     "import.import-key": "Import key",
@@ -66,7 +67,6 @@
     "shape.polygon.vezier.name": "ベジェ補正値",
     "shape.polygon.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "delete-duplicate-points": "重複点の削除",
-    "particle-amount": "パーティクル数",
     "command-amount": "コマンド数",
     "unit.points": "個",
     "unit.per": "%",
