:sparkles: Anchor図形を追加
close #16

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -66,8 +66,58 @@
     "shape.polygon.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
     "shape.polygon.vezier.name": "ベジェ補正値",
     "shape.polygon.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.line-anchor": "線アンカー",
+    "shape.line-anchor.count.name": "生成数",
+    "shape.line-anchor.count.description": "いくつの点で生成するか",
+    "shape.line-anchor.from.name": "始点",
+    "shape.line-anchor.from.description": "線アンカーの始点",
+    "shape.line-anchor.to.name": "終点",
+    "shape.line-anchor.to.description": "線アンカーの終点",
+    "shape.line-anchor.offset.name": "オフセット",
+    "shape.line-anchor.offset.description": "点の補正値",
+    "shape.line-anchor.vezier.name": "ベジェ補正値",
+    "shape.line-anchor.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.line-anchor.target.name": "対象",
+    "shape.line-anchor.target.description": "アンカーを適用する対象の図形",
+    "shape.circle-anchor": "円アンカー",
+    "shape.circle-anchor.count.name": "生成数",
+    "shape.circle-anchor.count.description": "いくつの場所で生成するか",
+    "shape.circle-anchor.center.name": "中心点",
+    "shape.circle-anchor.center.description": "円アンカーの中心点",
+    "shape.circle-anchor.radius.name": "半径",
+    "shape.circle-anchor.radius.description": "中心よりどれだけ離れた位置で円アンカーを作るか",
+    "shape.circle-anchor.start.name": "開始角",
+    "shape.circle-anchor.start.description": "円アンカーを始める角度",
+    "shape.circle-anchor.ellipse.name": "楕円補正値",
+    "shape.circle-anchor.ellipse.description": "楕円の歪みの強さ",
+    "shape.circle-anchor.rotate.name": "楕円角",
+    "shape.circle-anchor.rotate.description": "楕円の歪みを与える角度",
+    "shape.circle-anchor.target.name": "対象",
+    "shape.circle-anchor.target.description": "アンカーを適用する対象の図形",
+    "shape.polygon-anchor": "多角形アンカー",
+    "shape.polygon-anchor.count.name": "各線の生成数",
+    "shape.polygon-anchor.count.description": "一つの線当たりいくつの点で生成するか",
+    "shape.polygon-anchor.center.name": "中心点",
+    "shape.polygon-anchor.center.description": "多角形アンカーの中心点",
+    "shape.polygon-anchor.radius.name": "半径",
+    "shape.polygon-anchor.radius.description": "中心よりどれだけ離れた位置に角を作るか",
+    "shape.polygon-anchor.start.name": "開始角",
+    "shape.polygon-anchor.start.description": "多角形アンカーを始める角度",
+    "shape.polygon-anchor.ellipse.name": "楕円補正値",
+    "shape.polygon-anchor.ellipse.description": "楕円の歪みの強さ",
+    "shape.polygon-anchor.rotate.name": "楕円角",
+    "shape.polygon-anchor.rotate.description": "楕円の歪みを与える角度",
+    "shape.polygon-anchor.corner.name": "角の数",
+    "shape.polygon-anchor.corner.description": "",
+    "shape.polygon-anchor.jump.name": "紐づける角の遠さ",
+    "shape.polygon-anchor.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
+    "shape.polygon-anchor.vezier.name": "ベジェ補正値",
+    "shape.polygon-anchor.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.polygon-anchor.target.name": "対象",
+    "shape.polygon-anchor.target.description": "アンカーを適用する対象の図形",
     "delete-duplicate-points": "重複点の削除",
     "command-amount": "コマンド数",
+    "manipulated": "操作中",
     "unit.points": "個",
     "unit.per": "%",
     "unit.degree": "°",
