:sparkles: ベジェ曲線の歪んだ点を補正するオプションを追加

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -34,6 +34,8 @@
     "shape.line.offset.description": "点の補正値",
     "shape.line.vezier.name": "ベジェ補正値",
     "shape.line.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.line.isBezierEquallySpaced.name": "ベジェ等間隔化",
+    "shape.line.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.circle": "円",
     "shape.circle.count.name": "生成数",
     "shape.circle.count.description": "いくつの点で生成するか",
@@ -66,6 +68,8 @@
     "shape.polygon.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
     "shape.polygon.vezier.name": "ベジェ補正値",
     "shape.polygon.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.polygon.isBezierEquallySpaced.name": "ベジェ等間隔化",
+    "shape.polygon.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.line-anchor": "線アンカー",
     "shape.line-anchor.count.name": "生成数",
     "shape.line-anchor.count.description": "いくつの点で生成するか",
