:pencil2: typoを修正(それに伴い後方互換性用処理を追加

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -32,8 +32,8 @@
     "shape.line.to.description": "線の終点",
     "shape.line.offset.name": "オフセット",
     "shape.line.offset.description": "点の補正値",
-    "shape.line.vezier.name": "ベジェ補正値",
-    "shape.line.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.line.bezier.name": "ベジェ補正値",
+    "shape.line.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.line.isBezierEquallySpaced.name": "ベジェ等間隔化",
     "shape.line.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.circle": "円",
@@ -66,8 +66,8 @@
     "shape.polygon.corner.description": "",
     "shape.polygon.jump.name": "紐づける角の遠さ",
     "shape.polygon.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
-    "shape.polygon.vezier.name": "ベジェ補正値",
-    "shape.polygon.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.polygon.bezier.name": "ベジェ補正値",
+    "shape.polygon.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.polygon.isBezierEquallySpaced.name": "ベジェ等間隔化",
     "shape.polygon.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.line-anchor": "線アンカー",
@@ -79,8 +79,8 @@
     "shape.line-anchor.to.description": "線アンカーの終点",
     "shape.line-anchor.offset.name": "オフセット",
     "shape.line-anchor.offset.description": "点の補正値",
-    "shape.line-anchor.vezier.name": "ベジェ補正値",
-    "shape.line-anchor.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.line-anchor.bezier.name": "ベジェ補正値",
+    "shape.line-anchor.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.line-anchor.target.name": "対象",
     "shape.line-anchor.target.description": "アンカーを適用する対象の図形",
     "shape.circle-anchor": "円アンカー",
@@ -115,8 +115,8 @@
     "shape.polygon-anchor.corner.description": "",
     "shape.polygon-anchor.jump.name": "紐づける角の遠さ",
     "shape.polygon-anchor.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
-    "shape.polygon-anchor.vezier.name": "ベジェ補正値",
-    "shape.polygon-anchor.vezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
+    "shape.polygon-anchor.bezier.name": "ベジェ補正値",
+    "shape.polygon-anchor.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.polygon-anchor.target.name": "対象",
     "shape.polygon-anchor.target.description": "アンカーを適用する対象の図形",
     "delete-duplicate-points": "重複点の削除",
