:bug: locale keyの追加忘れを修正

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -85,6 +85,8 @@
     "shape.line-anchor.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.line-anchor.target.name": "対象",
     "shape.line-anchor.target.description": "アンカーを適用する対象の図形",
+    "shape.line-anchor.isBezierEquallySpaced.name": "ベジェ等間隔化",
+    "shape.line-anchor.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.circle-anchor": "円アンカー",
     "shape.circle-anchor.count.name": "生成数",
     "shape.circle-anchor.count.description": "いくつの場所で生成するか",
@@ -100,6 +102,8 @@
     "shape.circle-anchor.rotate.description": "楕円の歪みを与える角度",
     "shape.circle-anchor.target.name": "対象",
     "shape.circle-anchor.target.description": "アンカーを適用する対象の図形",
+    "shape.circle-anchor.isBezierEquallySpaced.name": "楕円等間隔化",
+    "shape.circle-anchor.isBezierEquallySpaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.polygon-anchor": "多角形アンカー",
     "shape.polygon-anchor.count.name": "各線の生成数",
     "shape.polygon-anchor.count.description": "一つの線当たりいくつの点で生成するか",
@@ -121,6 +125,8 @@
     "shape.polygon-anchor.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.polygon-anchor.target.name": "対象",
     "shape.polygon-anchor.target.description": "アンカーを適用する対象の図形",
+    "shape.polygon-anchor.isBezierEquallySpaced.name": "ベジェ等間隔化",
+    "shape.polygon-anchor.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "delete-duplicate-points": "重複点の削除",
     "command-amount": "コマンド数",
     "manipulated": "操作中",
