:bug: 多角形図形が楕円等間隔化を使用できないのを修正

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -34,8 +34,8 @@
     "shape.line.offset.description": "点の補正値",
     "shape.line.bezier.name": "ベジェ補正値",
     "shape.line.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
-    "shape.line.isBezierEquallySpaced.name": "ベジェ等間隔化",
-    "shape.line.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.line.is-bezier-equally-spaced.name": "ベジェ等間隔化",
+    "shape.line.is-bezier-equally-spaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.circle": "円",
     "shape.circle.count.name": "生成数",
     "shape.circle.count.description": "いくつの点で生成するか",
@@ -49,8 +49,8 @@
     "shape.circle.ellipse.description": "楕円の歪みの強さ",
     "shape.circle.rotate.name": "楕円角",
     "shape.circle.rotate.description": "楕円の歪みを与える角度",
-    "shape.circle.isBezierEquallySpaced.name": "楕円等間隔化",
-    "shape.circle.isBezierEquallySpaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.circle.is-ellipse-equally-spaced.name": "楕円等間隔化",
+    "shape.circle.is-ellipse-equally-spaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.polygon": "多角形",
     "shape.polygon.count.name": "各線の生成数",
     "shape.polygon.count.description": "一つの線当たりいくつの点で生成するか",
@@ -70,8 +70,10 @@
     "shape.polygon.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
     "shape.polygon.bezier.name": "ベジェ補正値",
     "shape.polygon.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
-    "shape.polygon.isBezierEquallySpaced.name": "ベジェ等間隔化",
-    "shape.polygon.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.polygon.is-ellipse-equally-spaced.name": "楕円等間隔化",
+    "shape.polygon.is-ellipse-equally-spaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.polygon.is-bezier-equally-spaced.name": "ベジェ等間隔化",
+    "shape.polygon.is-bezier-equally-spaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.line-anchor": "線アンカー",
     "shape.line-anchor.count.name": "生成数",
     "shape.line-anchor.count.description": "いくつの点で生成するか",
@@ -85,8 +87,8 @@
     "shape.line-anchor.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.line-anchor.target.name": "対象",
     "shape.line-anchor.target.description": "アンカーを適用する対象の図形",
-    "shape.line-anchor.isBezierEquallySpaced.name": "ベジェ等間隔化",
-    "shape.line-anchor.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.line-anchor.is-bezier-equally-spaced.name": "ベジェ等間隔化",
+    "shape.line-anchor.is-bezier-equally-spaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.circle-anchor": "円アンカー",
     "shape.circle-anchor.count.name": "生成数",
     "shape.circle-anchor.count.description": "いくつの場所で生成するか",
@@ -102,8 +104,8 @@
     "shape.circle-anchor.rotate.description": "楕円の歪みを与える角度",
     "shape.circle-anchor.target.name": "対象",
     "shape.circle-anchor.target.description": "アンカーを適用する対象の図形",
-    "shape.circle-anchor.isBezierEquallySpaced.name": "楕円等間隔化",
-    "shape.circle-anchor.isBezierEquallySpaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.circle-anchor.is-ellipse-equally-spaced.name": "楕円等間隔化",
+    "shape.circle-anchor.is-ellipse-equally-spaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
     "shape.polygon-anchor": "多角形アンカー",
     "shape.polygon-anchor.count.name": "各線の生成数",
     "shape.polygon-anchor.count.description": "一つの線当たりいくつの点で生成するか",
@@ -125,8 +127,10 @@
     "shape.polygon-anchor.bezier.description": "始点から見て+で右に, -で左に離れた位置を制御点にします",
     "shape.polygon-anchor.target.name": "対象",
     "shape.polygon-anchor.target.description": "アンカーを適用する対象の図形",
-    "shape.polygon-anchor.isBezierEquallySpaced.name": "ベジェ等間隔化",
-    "shape.polygon-anchor.isBezierEquallySpaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.polygon-anchor.is-ellipse-equally-spaced.name": "楕円等間隔化",
+    "shape.polygon-anchor.is-ellipse-equally-spaced.description": "有効化すると、楕円補正によって歪んだ点間の距離を等間隔に補正します",
+    "shape.polygon-anchor.is-bezier-equally-spaced.name": "ベジェ等間隔化",
+    "shape.polygon-anchor.is-bezier-equally-spaced.description": "有効化すると、ベジェ補正によって歪んだ点間の距離を等間隔に補正します",
     "delete-duplicate-points": "重複点の削除",
     "command-amount": "コマンド数",
     "manipulated": "操作中",
