:adhesive_bandage: パラメータの不足している説明文を追加

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -65,7 +65,7 @@
     "shape.polygon.rotate.name": "楕円角",
     "shape.polygon.rotate.description": "楕円の歪みを与える角度",
     "shape.polygon.corner.name": "角の数",
-    "shape.polygon.corner.description": "",
+    "shape.polygon.corner.description": "多角形の角",
     "shape.polygon.jump.name": "紐づける角の遠さ",
     "shape.polygon.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
     "shape.polygon.bezier.name": "ベジェ補正値",
@@ -120,7 +120,7 @@
     "shape.polygon-anchor.rotate.name": "楕円角",
     "shape.polygon-anchor.rotate.description": "楕円の歪みを与える角度",
     "shape.polygon-anchor.corner.name": "角の数",
-    "shape.polygon-anchor.corner.description": "",
+    "shape.polygon-anchor.corner.description": "多角形の角",
     "shape.polygon-anchor.jump.name": "紐づける角の遠さ",
     "shape.polygon-anchor.jump.description": "角をいくつ先の角と紐づけていくか 2以上で星などの複雑な図形を生成できます",
     "shape.polygon-anchor.bezier.name": "ベジェ補正値",
