--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -13,6 +13,7 @@
     "import.import-key": "Import key",
     "import.from-mcfunction": "from mcfunction",
     "import.from-key": "from key",
+    "menu.language": "表示言語",
     "menu.grid": "グリッド",
     "menu.grid.off": "Off",
     "menu.grid.block": "Block",
