:adhesive_bandage: 気になる小文字を修正

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,7 @@
     "error.invalid.import-key": "invalid Import key",
     "error.import-unknown-problem": "There was an unexpected problem with import.",
     "error.invalid-language": "Invalid language was specified.",
-    "shape.line": "line",
+    "shape.line": "Line",
     "shape.line.count.name": "count",
     "shape.line.count.description": "How many points to generate",
     "shape.line.from.name": "start",
@@ -38,7 +38,7 @@
     "shape.line.bezier.description": "Use + to set the control point to the right, and - to set the control point to the left, away from the starting point.",
     "shape.line.is-bezier-equally-spaced.name": "bezier equally spaced",
     "shape.line.is-bezier-equally-spaced.description": "When enabled, Bezier correction will correct distances between distorted points to equal distances.",
-    "shape.circle": "circle",
+    "shape.circle": "Circle",
     "shape.circle.count.name": "count",
     "shape.circle.count.description": "How many points",
     "shape.circle.center.name": "center",
@@ -53,7 +53,7 @@
     "shape.circle.rotate.description": "Angle that distorts the ellipse",
     "shape.circle.is-ellipse-equally-spaced.name": "ellipse equally spaced",
     "shape.circle.is-ellipse-equally-spaced.description": "When enabled, corrects distances between points distorted by ellipse correction to equal distances.",
-    "shape.polygon": "polygon",
+    "shape.polygon": "Polygon",
     "shape.polygon.count.name": "count (line for each)",
     "shape.polygon.count.description": "How many points to generate per line?",
     "shape.polygon.center.name": "center",
@@ -76,7 +76,7 @@
     "shape.polygon.is-ellipse-equally-spaced.description": "When enabled, corrects distances between points distorted by ellipse correction to equal distances.",
     "shape.polygon.is-bezier-equally-spaced.name": "bezier equally spaced",
     "shape.polygon.is-bezier-equally-spaced.description": "When enabled, Bezier correction will correct distances between distorted points to equal distances.",
-    "shape.line-anchor": "line anchor",
+    "shape.line-anchor": "Line anchor",
     "shape.line-anchor.count.name": "count",
     "shape.line-anchor.count.description": "How many points",
     "shape.line-anchor.from.name": "start",
@@ -91,7 +91,7 @@
     "shape.line-anchor.target.description": "Target shape to apply the anchor to",
     "shape.line-anchor.is-bezier-equally-spaced.name": "bezier equally spaced",
     "shape.line-anchor.is-bezier-equally-spaced.description": "When enabled, Bezier correction will correct distances between distorted points to equal distances.",
-    "shape.circle-anchor": "circle anchor",
+    "shape.circle-anchor": "Circle anchor",
     "shape.circle-anchor.count.name": "count",
     "shape.circle-anchor.count.description": "How many locations to generate",
     "shape.circle-anchor.center.name": "center",
@@ -108,7 +108,7 @@
     "shape.circle-anchor.target.description": "Target shape to apply the anchor to",
     "shape.circle-anchor.is-ellipse-equally-spaced.name": "ellipse equally spaced",
     "shape.circle-anchor.is-ellipse-equally-spaced.description": "When enabled, corrects distances between points distorted by ellipse correction to equal distances.",
-    "shape.polygon-anchor": "polygon anchor",
+    "shape.polygon-anchor": "Polygon anchor",
     "shape.polygon-anchor.count.name": "count (line for each)",
     "shape.polygon-anchor.count.description": "How many points to generate per line?",
     "shape.polygon-anchor.center.name": "center",
@@ -133,7 +133,7 @@
     "shape.polygon-anchor.is-ellipse-equally-spaced.description": "When enabled, corrects distances between points distorted by ellipse correction to equal distances.",
     "shape.polygon-anchor.is-bezier-equally-spaced.name": "bezier equally spaced",
     "shape.polygon-anchor.is-bezier-equally-spaced.description": "When enabled, Bezier correction will correct distances between distorted points to equal distances.",
-    "delete-duplicate-points": "delete duplicate points",
+    "delete-duplicate-points": "Delete duplicate points",
     "manipulated": "manipulated",
     "unit.points": "",
     "unit.per": "%",
